force-app/main/default/objects/Dataweave_Key_Mapping__mdt/Dataweave_Key_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Dataweave Key Mapping</label>
    <pluralLabel>Dataweave Key Mappings</pluralLabel>
</CustomObject>