force-app/main/default/objects/Dataweave_Key_Mapping__mdt/fields/Dataweave_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Dataweave_Mapping__c</fullName>
    <description>Relationship Filed to the Datafield Mapping this record belongs to.</description>
    <label>Dataweave Mapping</label>
    <referenceTo>Dataweave_Mapping__mdt</referenceTo>
    <relationshipLabel>Dataweave Key Mappings</relationshipLabel>
    <relationshipName>Dataweave_Key_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>