force-app/main/default/objects/Dataweave_Key_Mapping__mdt/fields/Incoming_Key__c.field-meta.xml
<CustomField>
    <fullName>Incoming_Key__c</fullName>
    <description>This field records the string representation of the key used for this data point in the INCOMING json body</description>
    <label>Incoming Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>