force-app/main/default/objects/Dataweave_Key_Mapping__mdt/fields/Outgoing_Key__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Key__c</fullName>
    <description>This field holds the string representation of the key you want this data assigned to in the OUTGOING json. For this dataweave script to result in a list of sObjects, this field MUST be the API name of a field on the associated type.</description>
    <label>Outgoing Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>